# doc-structure-parser

./: .gitignore  README.md  pyproject.toml
src/doc_structure_parser/: __init__.py  models.py
src/doc_structure_parser/parsers/: docx_parser.py  markdown_parser.py  pdf_parser.py
tests/: test_markdown_parser.py  test_models.py
