[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-structure-parser"
version = "0.1.0"
description = "PDF/DOCX → typed Pydantic with layout-aware splitting (headers, tables, footnotes). RAG-ready structure recovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tajaddin Gafarov", email = "gafarovtajaddin@gmail.com" }]
keywords = ["pdf", "docx", "rag", "etl", "document-parsing", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
pdf = ["pdfminer.six>=20240706"]
docx = ["python-docx>=1.1"]
all = ["pdfminer.six>=20240706", "python-docx>=1.1"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/Tajaddin/doc-structure-parser"
Repository = "https://github.com/Tajaddin/doc-structure-parser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
